feat(responsive): Add media queries for mobile.

--- a/index.html
+++ b/index.html
@@ -11,22 +11,21 @@
         <h1>New Year</h1>
         <div class="bg-block"></div>
         <div class="countdown-container">
-            <div class="container-block"></div>
             <div class="cd-el days-c">
                 <p class="large-text" id="days">0</p>
                 <span>days</span>
             </div>
-            <p class="large-text">:</p>
+            <p class="large-text colon">:</p>
             <div class="cd-el hours-c">
                 <p class="large-text" id="hours">0</p>
                 <span>hours</span>
             </div>
-            <p class="large-text">:</p>
+            <p class="large-text colon">:</p>
             <div class="cd-el mins-c">
                 <p class="large-text" id="mins">0</p>
                 <span>minutes</span>
             </div>
-            <p class="large-text">:</p>
+            <p class="large-text colon">:</p>
             <div class="cd-el secs-c">
                 <p class="large-text" id="secs">0</p>
                 <span>seconds</span>
